@@ -4,10 +4,10 @@ pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = libinifile++.pc
 
 lib_LTLIBRARIES = libinifile++.la
-libinifile___la_SOURCES = \
-	../inifile.c ../lexer.c ../parser.c ../token.c \
-	inifile++.hpp inifile++.cpp 
+
+libinifile___la_SOURCES = inifile++.hpp inifile++.cpp 
 libinifile___la_LDFLAGS = -version-info 4:0:0 
+libinifile___la_LIBADD  = $(top_srcdir)/src/libinifile.la
 
 AM_CPPFLAGS = -I$(top_srcdir)/src/cxx -I$(top_srcdir)/src
 
