@@ -2,7 +2,8 @@
 
       * Support for 64-bit Windows with package script (win32/package.bat).
       
-      * Clean compile on Linux using GLIBC >= 2.20
+      * Clean compile on Linux using GLIBC >= 2.20. Link the C++ library
+        with C-library to keep automake happy.
 
 0.6.0 (2010-10-20):
       
